# FuTaMa2

./: README.md  custom_settings_realsense_viewer.json
eeloscope_urdf/: CMakeLists.txt  package.xml
eeloscope_urdf/launch/: display.launch  gazebo.launch
eeloscope_urdf/meshes/: base_link.STL
eeloscope_urdf/urdf/: eeloscope_urdf.csv  eeloscope_urdf.urdf
futama2_robot/futama2_description/: package.xml  setup.cfg  setup.py
futama2_robot/futama2_description/config/: initial_positions.yaml  initial_positions_oip.yaml
futama2_robot/futama2_description/launch/: joint_demo.launch.py  launch.py  ur_control.launch.py
futama2_robot/futama2_description/meshes/collision/: GOM_Wing_1_hyperreduced.stl  GOM_Wing_1_superreduced.stl  antenne.stl  cube.stl  dlr_robo_test.stl  realsense_tpu_link.STL
futama2_robot/futama2_description/meshes/visual/: base_link.STL
futama2_robot/futama2_description/rviz/: default.rviz
futama2_robot/futama2_description/urdf/: futama2.xacro  robot.urdf.xacro  ur.urdf.xacro  ur_control.xacro
futama2_robot/futama2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
futama2_robot/futama2_moveit_config/config/: chomp_planning.yaml  collison_objects.yaml  futama2.rviz  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  realsense_depthmap.yaml  realsense_pointcloud.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
futama2_robot/futama2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
futama2_robot/futama2_moveit_config/src/: planning_scene_publisher.cpp  planning_scene_publisher_cube.cpp  planning_scene_publisher_insp_obj.cpp
futama2_robot/futama2_teleop/: CMakeLists.txt  package.xml
futama2_robot/futama2_teleop/config/: futama2.rviz  futama2_rosbag.rviz  futama2_ur_servo.yaml  futama2_ur_servo_fit.yaml  futama2_ur_servo_front.yaml  mcap.yaml  motion_planning.yaml  motion_planning_python_api_tutorial.yaml  poses.txt  qos.yaml
futama2_robot/futama2_teleop/launch/: auto_insp_oip.launch.py  auto_insp_oip_launch.py  auto_insp_wing.launch.py  minimal_motion_planner_api.launch.py  rosbag_python_api.py  rs_launch.py  rs_multi_camera_launch.py  teleop.launch.py  teleop_demo.launch.py  teleop_sim.launch.py
futama2_robot/futama2_teleop/rviz/: futama2_1x_cam.rviz  futama2_real_1x_d405.rviz  futama2_real_3x_d405.rviz
futama2_robot/futama2_teleop/scripts/: auto_insp_demo_node.py  auto_insp_node.py  auto_insp_oip_node.py  auto_insp_wing_node.py  foto_capture_node.py  inspection_helper_funcs.py  jogging_sim.py  joystick_teleoperating_modes.py  minimal_motion_planner_api.py  odometry_node.py
futama2_robot/futama2_teleop/src/: joystick_teleop.cpp  joystick_teleop_percept_coll_avoidance.cpp  keyboard_teleop.cpp  octomap_distance_node.cpp
futama2_robot/futama2_utils/: package.xml  setup.cfg  setup.py
futama2_robot/futama2_utils/futama2_utils/: moveit_funcs.py
images/: mock-manual-teleop.png.license
realsense_with_tpu_urdf/: CMakeLists.txt  package.xml
realsense_with_tpu_urdf/launch/: display.launch  gazebo.launch
realsense_with_tpu_urdf/meshes/: realsense_tpu_link.STL
realsense_with_tpu_urdf/urdf/: realsense_with_tpu_urdf.csv  realsense_with_tpu_urdf.urdf
